--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -231,3 +231,32 @@ form input[disabled]{
     background: red;
     color: white;
 }
+
+
+/*Pagina de proyectos*/
+
+.project{
+    list-style: none;
+    display: block;
+    float: left;
+    width: 30%;
+    text-align: center;
+    margin-left: 23px;
+    margin-right: 20px;
+    margin-bottom: 30px;
+    font-family: 'titilium';
+}
+
+.project image{
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+}
+
+.project img{
+    width: 250px;
+}
+.project a{
+    text-decoration: none;
+    color: black;
+}
