--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,20 @@
-<p>contact works!</p>
+<div class="container">
+
+<h1>Contacto</h1>
+
+<div id="texto" #textos>
+    <p>This the page of contact, join us</p>
+</div>
+<!-- Tamaño del Slider:
+<input type="number" [(ngModel)]="widthSlider" >
+<button (click)="cargarSlider()">Cargar</button>
+<button (click)="resetSlider()">Resetear</button>
+<div *ngIf="anchuraToSlider">
+
+
+<app-slider [anchura]="anchuraToSlider"
+            [etiquetas]="captions"
+            (conseguirAutor)="getAutor()"></app-slider>
+</div> -->
+
+</div>
