--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -36,13 +36,19 @@
         </p>
         <p>
             <label for="image">Imagen del proyecto</label>
+            <span class="image" *ngIf="project.image" style="float: none;">
+                <img src="{{url + 'get-image/'+project.image}}" *ngIf="project.image" style="width: 100px;">
+            </span>
+            <br>
+            <br>
+            <br>
             <input type="file" name="image" placeholder="Subir imagen" (change)="fileChangeEvent($event)">
         </p>
         
         <input type="submit" value="Enviar" [disabled]="!projectForm.form.valid">
     </form>
     <br>
-    <div class="message success" *ngIf="status == 'success' && project">El Proyecto se a creado correctamente, velo <a [routerLink]="['/proyecto', 'save_project._id']">aqui</a></div>
+    <div class="message success" *ngIf="status == 'success' && project" >El Proyecto se a creado correctamente, velo <a [routerLink]="['/proyecto', 'save_project._id']">aqui</a></div>
 
     <div class="message failed" *ngIf="status == 'failed'">El Proyecto no se ha podido crear</div>
 </div>
