--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -1,2 +1,23 @@
-<h1>{{project.name}}</h1>
+<div class="container" *ngIf="project">
+
+    
+    <div class="image" *ngIf="project.image">
+        <img src="{{url + 'get-image/'+project.image}}" *ngIf="project.image">
+    </div>
+    <div class="data">
+        <h1>{{project.name}}</h1>
+        <h3>{{project.description}}</h3>
+        <p>{{project.category}}</p>
+        <p>{{project.langs}}</p>
+        <p *ngIf="confirm == false">
+            <a [routerLink]="['/Editar', project._id]" class="button-edit">Editar</a>
+            <a (click)="setConfirm(true)" class="button-delete">Borrar</a>
+        </p>
+        <p *ngIf="confirm == true">
+            <span class="confirm">¿Estas seguro de eliminar este proyecto?</span>
+            <a (click)="setConfirm(false)" class="button-edit">Cancelar</a>
+            <a (click)="deleteProject(project._id)" class="button-delete">Eliminar</a>
+        </p>
+    </div>
+</div>
 
