--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -150,6 +150,22 @@ article.about{
     padding-top: 10px;
 }
 
+.container .image{
+    float: left;
+    width: 30%;
+}
+
+.container .image img{
+    float: left;
+    width: 100%;
+}
+
+.container .data{
+    float: left;
+    width: 50%;
+    margin-left: 30px;
+}
+
 .container h2{
     display: block;
     border-bottom: 1px solid #ccc;
@@ -178,7 +194,9 @@ form textarea{
 }
 
 form button,
-form input[type="submit"]{
+form input[type="submit"],
+.button-edit,
+.button-delete{
     display: block;
     font-size: 17px;
     padding: 5px;
@@ -187,6 +205,29 @@ form input[type="submit"]{
     background: rgba(53, 103, 164, 1);
     border: 1px solid rgb(11, 56, 112);
     cursor: pointer;
+}
+
+.button-edit,
+.button-delete{
+    width: 15%;
+    margin-right: 10px;
+    text-decoration: none;
+    font-family: 'titilium';
+    text-align: center;
+    font-size: small;
+    border-radius: 20px 20px 20px 20px;
+    border: 2px solid;
+    border-color: black;
+}
+
+.button-edit{
+    background-color: rgba(89, 131, 252, 1);
+    background-image: linear-gradient(175deg, rgba(89, 131, 252, 1) 12%, rgba(41, 53, 86, 1) 70%);
+}
+
+.button-delete{
+    background-color: rgba(252, 89, 92, 1);
+    background-image: linear-gradient(175deg, rgba(252, 89, 92, 1) 12%, rgba(86, 41, 42, 1) 70%);
 }
 
 form button:hover,
@@ -259,4 +300,11 @@ form input[disabled]{
 .project a{
     text-decoration: none;
     color: black;
+}
+
+.confirm{
+    display: block;
+    font-weight: bold;
+    margin-top: 10px;
+
 }
