--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,13 @@
-
-
-
-<div class="col-lg-8 col-lg-offset-2">
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-3">{{title}}</h1>
-            <p class="lead">Disfruta de los animales más exoticos de nuestro Zoologico</p>
-            <p><a class="btn btn-primary btn-lg" role="button" [routerLink]="['/animales']">Ver animales</a></p>
-            <p><a class="btn btn-primary btn-lg" role="button" [routerLink]="['/cuidadores']">Ver cuidadores</a></p>
-            
+<div class="col-12 d-flex justify-content-center align-items-center" >
+    <div class="col-lg-8 col-lg-offset-2">
+        <div class="p-5 mb-4 bg-light rounded-3" id="container">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">{{title}}</h1>
+                <p class="col-md-8 fs-4">Disfruta de los animales más exoticos de nuestro Zoologico</p>
+                <p><a class="btn btn-primary btn-xl" role="button" [routerLink]="['/animales']">Ver animales</a></p>
+                <p><a class="btn btn-success btn-xl" role="button" [routerLink]="['/cuidadores']">Ver cuidadores</a></p>
+                <p><a class="btn btn-warning btn-xl" role="button" [routerLink]="['/contacto']">Contacta con nosotros</a></p>
+            </div>
         </div>
     </div>
 </div>
