--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -10,3 +10,13 @@
     margin-top: 15px;
     margin-left: 15px;
 }
+
+#container{
+    padding: 40px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 1px #ccc;
+}   
+
+.container-fluid .active{
+    border-bottom: 3px solid red;
+}
