--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,3 @@
 <h2>{{title}}</h2>
 
-<input type="text" [(ngModel)]="emailContacto">
-<br>
-<br>
-<button (click)="guardarEmail()">Guardar</button>
+<app-main-email></app-main-email>
