--- a/src/app/components/tienda/tienda.component.html
+++ b/src/app/components/tienda/tienda.component.html
@@ -1,3 +1,15 @@
+
+<a class="boton_activo btn btn-success"
+[@marcar]="'inactive'">Activar boton</a>
+
+<hr>
+<h4>Animaciones CSS3</h4>
+<a class="boton_transiciones">Transiciones</a>
+<div class="clearfix"></div>
+<br>
+<div class="caja_animada"></div>
+
+<hr>
 Padre:
 <h1>{{titulo}}</h1>
 <ul>
