--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="col-12 d-flex justify-content-center align-items-center" >
+<div class="col-12 d-flex justify-content-center align-items-center" [@fadeIn]>
     <div class="col-lg-8 col-lg-offset-2">
         <div class="p-5 mb-4 bg-light rounded-3" id="container">
             <div class="container-fluid py-5">
